--- a/login.html
+++ b/login.html
@@ -13,25 +13,38 @@
       </header>
 
   <section> 
-  <h3> Contato </h3>
+  
   <div class="align-row" >
     <form method="get" class="form">
 
-        <button type="button">LOGIN</button>
-            <button type="button">CADASTRO</button> 
-        <br>
+      <br>
+      <div class="botoes">
+        <button type="button" class="login">Login</button>
+        <button type="button" class="cadastro">Cadastro</button>
+      </div>
+      <br>
+
+  </div>
+  <br>
 
         <label for="usuario">Usuario:</label>
         <br>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name" required class="formulario">
         <br>
         <label for="senha">Senha:</label>
         <br>
-        <input type="password" id="password" name="password" required>
+        <input type="password" id="password" name="password" required class="formulario">
         <br>
-        
-        <button type="submit">Enviar</button>
-        <button type="reset">Limpar</button>
+
+        <br>
+        <div class="botoes">
+          <button type="button" class="entrar">Entrar</button>
+          <button type="button" class="limpar">Limpar</button>
+        </div>
+        <br>
+
+    </div>
+    <br>
     </div>
        </section>
        <section class="anuncio">
@@ -39,7 +52,7 @@
             <p class="experimente">Experimente agora mesmo!</p>
             <p class="primeira">Primeira consulta grátis!</p>
 
-            <button type="button">Fazer cadastro</button>
+            <button type="button" >Fazer cadastro</button>
             <button type="button">Contato</button>
 
         
