--- a/cadastro.html
+++ b/cadastro.html
@@ -15,33 +15,34 @@
   </header>
 
   <section>
-    <h3 class="cadastro"> Cadastro de usuario </h3>
-    <div class="align-row">
-      <form method="POST" class="formulario">
+    <h3 class="cadastro" > Cadastro de usuario </h3>
+    <div class="align-row" >
+      <form method="POST" >
+        
 
         <label for="name" class="nome">Nome:</label>
         <br>
-        <input type="text" id="name" name="name" required class="name">
+        <input type="text" id="name" name="name" required class="formulario">
         <br>
 
         <label for="endereco">Endereço:</label>
         <br>
-        <input type="text" id="endereco" name="endereco" required class="endereco">
+        <input type="text" id="endereco" name="endereco" required class="formulario">
         <br>
 
         <label for="number">Telefone/Whatsapp:</label>
         <br>
-        <input type="number" id="number" name="number" required class="number">
+        <input type="number" id="number" name="number" required class="formulario">
         <br>
 
         <label for="email">E-mail:</label>
         <br>
-        <input type="email" id="email" name="email" required class="email">
+        <input type="email" id="email" name="email" required class="formulario">
         <br>
 
         <label>Sexo:</label>
         <br>
-        <select name="Genero" class="genero">
+        <select name="Genero" class="formulario">
           <option value="1">Masculino
           </option>
           <option value="2">Feminino
@@ -52,17 +53,17 @@
         <br>
         <label>Data de nascimento:</label>
         <br>
-        <input type="date" id="date" name="date" class="date">
+        <input type="date" id="date" name="date" class="formulario">
         <br>
         <label>CPF:</label>
         <br>
 
-        <input type="text" name="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" class="cpf">
+        <input type="text" name="cpf" pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" class="formulario">
         <br>
 
         <label>PET:</label>
         <br>
-        <select name="tipo" class="pet">
+        <select name="tipo" class="formulario">
           <option value="1">Cachorro
           </option>
           <option value="2">Gato
@@ -70,11 +71,11 @@
         <br>
         <label for="name">Nome do pet:</label>
         <br>
-        <input type="text" id="namePet" name="name" required class="namePet">
+        <input type="text" id="namePet" name="name" required class="formulario">
         <br>
         <label for="idadePet">Idade do pet:</label>
         <br>
-        <input type="text" id="idadePet" name="Idade" required class="idadePet">
+        <input type="text" id="idadePet" name="Idade" required class="formulario">
         <br>
 
 
