--- a/contato.html
+++ b/contato.html
@@ -13,38 +13,43 @@
       </header>
 
   <section> 
-  <h3> Contato </h3>
+  <h3 class="contato"> CONTATO </h3>
   <div class="align-row">
     <form method="POST">
         <label for="name">Nome:</label>
         <br>
-        <input type="text" id="name" name="name" required>
+        <input type="text" id="name" name="name" required class="formulario">
         <br>
         <label for="email">E-mail:</label>
         <br>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email" required class="formulario">
         <br>
         <label for="number">Numero/Whatsapp:</label>
         <br>
-        <input type="number" id="number" name="number" required>
+        <input type="number" id="number" name="number" required class="formulario">
         <br>
         <label for="Mensagem">Mensagem:</label>
         <br>
-        <input type="text" id= "mensagem" name="Mensagem" size="300"/>
+        <input type="text" id= "mensagem" name="Mensagem" size="300" class="mensagem"/>
         <br>
-        <button type="submit">Enviar</button>
-        <button type="reset">Limpar</button>
-    </div>
+        <div class="botoes">
+          <button type="button" class="enviar">Enviar</button>
+          <button type="button" class="limpar">Limpar</button>
+        </div>
+        <br>
        </section>
        <section class="anuncio">
-
-            <p class="experimente">Experimente agora mesmo!</p>
+         <div class="box"></div>
+              <p class="experimente">Experimente agora mesmo!</p>
+              <br>
             <p class="primeira">Primeira consulta grátis!</p>
+          </div>
 
-            <button type="button">Fazer cadastro</button>
-            <button type="button">Contato</button>
-
-        
+            <div class="botoes">
+              <button type="button" class="fazerCadastro">Fazer cadastro</button>
+              <button type="button" class="contatoPromocao">Contato</button>
+            </div>
+            <br>
        </section>
 
 
