--- a/login.html
+++ b/login.html
@@ -48,15 +48,18 @@
     </div>
        </section>
        <section class="anuncio">
+        <div class="box"></div>
+             <p class="experimente">Experimente agora mesmo!</p>
+             <br>
+           <p class="primeira">Primeira consulta grátis!</p>
+         </div>
 
-            <p class="experimente">Experimente agora mesmo!</p>
-            <p class="primeira">Primeira consulta grátis!</p>
-
-            <button type="button" >Fazer cadastro</button>
-            <button type="button">Contato</button>
-
-        
-       </section>
+           <div class="botoes">
+             <button type="button" class="fazerCadastro">Fazer cadastro</button>
+             <button type="button" class="contatoPromocao">Contato</button>
+           </div>
+           <br>
+      </section>
 
 
    <footer>
